Verwysing nå döärverwyssyde repareerd ([[Frais]] nå [[Freeske taaln]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Nederlaands.mw
+++ b/Nederlaands.mw
@@ -2,7 +2,7 @@ t '''Nederlaands''' is n [[Indo-Uropese taolen|Indo-Europese]] en [[Germaanse sp
 
 Dizze toal wordt veural in [[Nederlaand]], [[Vlaonderen|Floandern]], [[Frans-Floandern]], [[Surinoam]], [[Aruba]], [[Curaçao|Kuresou]], [[St. Meerten (aailaand)|Sunt Meerten]] en op de [[Nederlaandse Antillen]] sproken. De offisjele toal, zo as of dat t onderwezen wordt op de schoulen, en dat t bruukt wordt deur de autoriteiten, wordt 'Standaardnederlands' nuimd (vrogger: 'Aalgemain Beschoafd Nederlaands' (ABN)). t Nederlaands wordt (nait in aal de gevallen krekt) ook wol aanduud as [[Vlaoms|Vloams]] (in [[Belgie]]), ''Hollaands'' (veuraal in [[Noord-Braobant|Noordbroabant]], [[Limburg (Nederlaand)|Limbörg]], Noord- en Oost-Nederlaand) en [[Nederduuts]] (deur historisch toalkundegen). In [[Indonesie]], t veurmoaleg [[Nederlaands-Indie]] is ter nog n redelk aantel aan [[mense|mìnsken]] dij t Nederlaands proaten kennen. Dit binnen veuraal de wat ollere lu. Ien t noordelk Rhainlaand wuir t Nederlaands nog tot om en bie 1865 broekt worden deur de haile bevolken. Ien Kleve is t pas om en bie 1935 deur t Hoogduuts vervongen worden. t Dialekt dat tegenswoordeg ien t Klevelaand proat wordt is den ook staark verbonden mit dij aan aander kaant van de Nederlaandse grìns, maisttied wordt t zulfs tot t [[Zuud-Gelders]] rekend.
 
-t Standoardnederlaands is vanof de [[16e eeuw|16e aiw]] ontwikkeld worden; de omvangrieke Nederlaandse [[Biebel]]vertoalen, de [[Stoatenbiebel]] (1637), het d'r veul wille van had. Boasis van Standoardnederlaands vörmden de Frankische [[dialect|dialekten]] van steden as [[Amsterdam]], [[Haarlem]] en [[Leiden]] in [[Hollaand (gewest)|t gewest Hollaand]].<ref>[http://taalschrift.org/reportage/000659.html Taalschrift: 'ABN was vooral een Hollandse uitvinding' (vraogpraotien mit Nicoline van der Sijs)]</ref> [[Nedersaksisch]]e elementen binnen veural de waarkwoordsvörms op -acht (bracht, gebracht; dacht, gedacht) en t weeromkerend veurnoamwoord zich. Daarde grode dialektgroep in de Lege Landen, t [[Frais]], is bie de ontwikkelen van t Standoardnederlaands haldaal negeerd worden. Op boasis van dizze dialekten is n zölfstaandige [[Westlaauwers Frais|Fraise]] standoardtoal in wezen brocht.
+t Standoardnederlaands is vanof de [[16e eeuw|16e aiw]] ontwikkeld worden; de omvangrieke Nederlaandse [[Biebel]]vertoalen, de [[Stoatenbiebel]] (1637), het d'r veul wille van had. Boasis van Standoardnederlaands vörmden de Frankische [[dialect|dialekten]] van steden as [[Amsterdam]], [[Haarlem]] en [[Leiden]] in [[Hollaand (gewest)|t gewest Hollaand]].<ref>[http://taalschrift.org/reportage/000659.html Taalschrift: 'ABN was vooral een Hollandse uitvinding' (vraogpraotien mit Nicoline van der Sijs)]</ref> [[Nedersaksisch]]e elementen binnen veural de waarkwoordsvörms op -acht (bracht, gebracht; dacht, gedacht) en t weeromkerend veurnoamwoord zich. Daarde grode dialektgroep in de Lege Landen, t [[Freeske taaln|Frais]], is bie de ontwikkelen van t Standoardnederlaands haldaal negeerd worden. Op boasis van dizze dialekten is n zölfstaandige [[Westlaauwers Frais|Fraise]] standoardtoal in wezen brocht.
 
 == Klassifikoatie ==
 {{interwiki|kode=nl}}
