Verwysing nå döärverwyssyde repareerd ([[Freesk]] nå [[Freeske taaln]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Grunnen_(provìnzie).mw
+++ b/Grunnen_(provìnzie).mw
@@ -30,7 +30,7 @@ Bie  provìnzie heuren drij leutje [[Waddenaailanden]]: [[Röttemeroog|t Oog]], 
 
 <div style="text-align: justify">
 == Algemain ==
-Provìnzie wordt ook wel ''Stad en [[Ommelanden]]'' nuimd, omdat ien vrouger tied  [[Grunnen (stad)|Stad]] (oorspronkelk [[Nedersaksisch|Saksisch]]) en t omliggend plattelaand (oorspronkelk [[Freesk|Frais]]) laange tied in onmin leefd hebben. De drij historische Ommelanden binnen [[Hunzego]], [[Fivelgo]] en t [[Westerkertaaier]]. De [[Ommelanden]] en t [[Oldambt (streek)|Oldambt]] waren tot [[15e eeuw|15e aiw]] grotendails Fraistoaleg. De Stad, t [[Gerecht (streek)|Gorecht]] en [[Westerwoolde (streek)|Westerwolde]] waren Leegsaksisch. Nou wordt sikkom overaal in Ommelanden [[Nedersaksisch|Leegsaksische]] [[dialekt]]en proat. Allend in  dörpen [[Moarem]], [[De Wilp]] en [[De Penne (Grönnen)|De Penne]] in t Westerkertaaier wordt nog [[Westlaauwers Frais|Frais]] proat.
+Provìnzie wordt ook wel ''Stad en [[Ommelanden]]'' nuimd, omdat ien vrouger tied  [[Grunnen (stad)|Stad]] (oorspronkelk [[Nedersaksisch|Saksisch]]) en t omliggend plattelaand (oorspronkelk [[Freeske taaln|Frais]]) laange tied in onmin leefd hebben. De drij historische Ommelanden binnen [[Hunzego]], [[Fivelgo]] en t [[Westerkertaaier]]. De [[Ommelanden]] en t [[Oldambt (streek)|Oldambt]] waren tot [[15e eeuw|15e aiw]] grotendails Fraistoaleg. De Stad, t [[Gerecht (streek)|Gorecht]] en [[Westerwoolde (streek)|Westerwolde]] waren Leegsaksisch. Nou wordt sikkom overaal in Ommelanden [[Nedersaksisch|Leegsaksische]] [[dialekt]]en proat. Allend in  dörpen [[Moarem]], [[De Wilp]] en [[De Penne (Grönnen)|De Penne]] in t Westerkertaaier wordt nog [[Westlaauwers Frais|Frais]] proat.
 
 Der binnen vaaier [[Stad (woonstee)|steden]] in de provìnzie: [[Grunnen (stad)|Grunnen]], [[n Daam]], [[Winschoot]], [[Delfziel]].
 
@@ -251,9 +251,9 @@ t Bestuurliek zìntrum van de provìnzie is vaastegd in t historische provìnzie
 * [[Nienke Homan]] (GroenLinks)
 
 == Hìnwiezen ==
-* [http://www.provinciegroningen.nl Offisjeel webstee van de provìnzie Grunnen]
-* [http://www.groningen.nl VVV Grunnen]
-* [http://www.rtvnoord.nl Regionoale radio- en tvomroup, mit fotos van Grunnen]
+* [http://www.provinciegroningen.nl/ Offisjeel webstee van de provìnzie Grunnen]
+* [http://www.groningen.nl/ VVV Grunnen]
+* [http://www.rtvnoord.nl/ Regionoale radio- en tvomroup, mit fotos van Grunnen]
 
 {{GrunnegerOmmelanden}}
 {{GemaintesGrunnen}}
