--- a/Grunnen_(stad).mw
+++ b/Grunnen_(stad).mw
@@ -1,9 +1,9 @@
-[[Bestaand:Martini3.jpg|250px|right|thumb|De olle grieze Martinitoern in t zèntrum]]
-[[Bestaand:Groeninga - Groningen (Atlas van Loon).jpg|thumb|250px|right|''Historische koart van t Stad'']]
-[[Bestaand:Groningen_Der_Aa-kerk_april04.jpg|250px|right|thumb|Der Aa-Kerk in Stad]]
-[[Bestaand:Brugstraat, Groningen 1464.jpg|right|250px|thumb|Der Aa-Kerk van ander kaant]]
-[[Bestaand:Ploatsnoambred_Stad_Grunnen.jpg|right|200px]]
-De '''Stad Grunnen''' (ook: ''Stad Grönnen'' of gewoon ''Stad'', [[Nederlaands]]: ''Groningen'', [[Frais]]: ''Grins'') is de [[heufdstad]] van de [[Grunnen (provìnzie)|provìnzie Grunnen]] en de heufploats van de [[Grunnen (gemainte)|gemainte Grunnen]]. De stad geldt as metropool van t noorden. De stad het 200.000 inwoner (2017). t Is n stad mit n bult  [[handel (economie)|haandel]] en [[industrie]]. Grunnen is ook n studentenstad. De [[Rieksakademie Grunnen]] en de [[Haanzehogeschool Grunnen]] hebben soamen sikkom 50.000 studenten. Grunnen wordt den ook de 'jonkste' stad van [[Nederlaand]] nuimd. De stad is as woonstee in trek bie studenten en jonge hoesholdens mit kiender.
+[[Bestaand:Martini3.jpg|250px|thumb|De olle grieze Martinitoern in t zèntrum]]
+[[Bestaand:Groeninga - Groningen (Atlas van Loon).jpg|thumb|250px|''Historische koart van t Stad'']]
+[[Bestaand:Groningen_Der_Aa-kerk_april04.jpg|250px|thumb|Der Aa-Kerk in Stad]]
+[[Bestaand:Brugstraat, Groningen 1464.jpg|250px|thumb|Der Aa-Kerk van ander kaant]]
+[[Bestaand:Ploatsnoambred_Stad_Grunnen.jpg|200px]]
+De '''Stad Grunnen''' (ook: ''Stad Grönnen'' of gewoon ''Stad'', [[Nederlaands]]: ''Groningen'', [[Westlaauwers Frais|Frais]]: ''Grins'') is de [[heufdstad]] van de [[Grunnen (provìnzie)|provìnzie Grunnen]] en de heufploats van de [[Grunnen (gemainte)|gemainte Grunnen]]. De stad geldt as metropool van t noorden. De stad het 200.000 inwoner (2017). t Is n stad mit n bult [[handel (economie)|haandel]] en [[industrie]]. Grunnen is ook n studentenstad. De [[Rieksakademie Grunnen]] en de [[Haanzehogeschool Grunnen]] hebben soamen sikkom 50.000 studenten. Grunnen wordt den ook de 'jonkste' stad van [[Nederlaand]] nuimd. De stad is as woonstee in trek bie studenten en jonge hoesholdens mit kiender.
 
 De binnenstad van Grunnen is in 2005 tot beste binnenstad van [[Nederlaand]] verkozen. Dit blef e tot noa 2007.
 
@@ -14,35 +14,35 @@ In provìnzie neumt elkenain Grunnen "''Stad''". In de bus letst dien strippenko
 Zulf hebben de Stadjeders as bienoam: [[molleboon|mollebonen]].
 
 == Historie ==
-Grunnen is begunt op t end van  [[Hondsrug]]. t Eerst dat wie van Stad heuren komt oet 1040. Dat joar wordt aanholden as begundoatem. Stad Har al gauw [[stadsrechten]] en is doarmit de 3e oldste stad van Nederlaand as t goat om stadsrechten (''[[Nimweeg]] en [[Deventer]] goan der nog veur''). t Aiglieks Drentse [[Esdorp|esloug]] wuir in de [[middelaiwen]] n belaankrieke handelsploats. Om te loaten zain wel boas was, baauwden  [[stadjers]] in  [[13e eeuw|13e aiw]] op aaigens gezag n omwallen.  Stad wer in dij tied ook lid van de [[Hanze]].  Invloud van  Stad op  [[Ommelanden]] wer so groot dat doardeur  toal van [[Frais]] veraanderde in Saksische [[Grunnegs]].
+Grunnen is begunt op t end van [[Hondsrug]]. t Eerst dat wie van Stad heuren komt oet 1040. Dat joar wordt aanholden as begundoatem. Stad Har al gauw [[stadsrechten]] en is doarmit de 3e oldste stad van Nederlaand as t goat om stadsrechten (''[[Nimweeg]] en [[Deventer]] goan der nog veur''). t Aiglieks Drentse [[Esdorp|esloug]] wuir in de [[middelaiwen]] n belaankrieke handelsploats. Om te loaten zain wel boas was, baauwden [[stadjers]] in [[13e eeuw|13e aiw]] op aaigens gezag n omwallen. Stad wer in dij tied ook lid van de [[Hanze]]. Invloud van Stad op [[Ommelanden]] wer so groot dat doardeur toal van [[Frais]] veraanderde in Saksische [[Grunnegs]].
 
-Invloud van  Stad op  provìnzie zagst doe op op bult menaaiern. In summege gevaaln, bieveurbeeld in [[Westerwoolde (streek)|Westerwolde]], funksjoneerde de Stad rechtstreeks as laandsheer, in andere gevallen was  Stad enkeld aanwezeg as grondbezitter, in weer andere gevallen as vervener, bieveurbeeld deur t aanleggen van t [[Stadsknoal (knoal)|Stadsknoal]] of as inpolderoar bieveurbeeld in  [[Stadspolder]]. Grunnen was tot wied in de [[20e eeuw|20e aiw]] noa t riek dij mainste grond har in [[Nederlaand]].
+Invloud van Stad op provìnzie zagst doe op op bult menaaiern. In summege gevaaln, bieveurbeeld in [[Westerwoolde (streek)|Westerwolde]], funksjoneerde de Stad rechtstreeks as laandsheer, in andere gevallen was Stad enkeld aanwezeg as grondbezitter, in weer andere gevallen as vervener, bieveurbeeld deur t aanleggen van t [[Stadsknoal (knoal)|Stadsknoal]] of as inpolderoar bieveurbeeld in [[Stadspolder]]. Grunnen was tot wied in de [[20e eeuw|20e aiw]] noa t riek dij mainste grond har in [[Nederlaand]].
 
-Grunnen kreeg in [[1614]] heur [[Universiteit|akademie]] en loater in  zeuventiende aiw n nije omwallen, ontworpen deur vestenbaauwer [[Menno van Coehoorn]]. Dij nije vesten wuir in t [[rampjaar]] [[1672]] belegerd deur  [[bisschop]] van [[Munster (stad)|Munster]], [[Bernhard von Galen|Berend van Goalen]]. Elk joar op [[28 augustus]] vaaiert  Stad  dat ze boas binnen bleven op ''Bommen Berend'' (zai [[Grunnegs Ontzet]]).
+Grunnen kreeg in [[1614]] heur [[Universiteit|akademie]] en loater in zeuventiende aiw n nije omwallen, ontworpen deur vestenbaauwer [[Menno van Coehoorn]]. Dij nije vesten wuir in t [[rampjaar]] [[1672]] belegerd deur [[bisschop]] van [[Munster (stad)|Munster]], [[Bernhard von Galen|Berend van Goalen]]. Elk joar op [[28 augustus]] vaaiert Stad dat ze boas binnen bleven op ''Bommen Berend'' (zai [[Grunnegs Ontzet]]).
 
 In [[1772]] wer der n [[Vrijmezzelderij|Vrijmezzelderslozie]] oprichten doan, [[L' Union Provinciale]] nuimd. Dizze lozie het ondermeer biedroagen wilt an t keren van de stried tuzzen Stad en Ommelanden in de tied van heur oprichtens, vandoar ook de betaikenis van de noam: "Pervinsjoale Ainhaid". Tegenswoardeg het Stad 5 Vrijmezzelderslozies.
 
 == Zainsweerdegheden ==
 Belaankrieke zainsweerdegheden in t zèntrum binnen:
-*  [[Martinitoorn]] (ook wel ''d'Olle Grieze'' nuimd in t [[Stadsgrunnegs|Stadjeders]]) 
+* [[Martinitoorn]] (ook wel ''d'Olle Grieze'' nuimd in t [[Stadsgrunnegs|Stadjeders]]) 
 * bieheurende [[Martinikèrke (Groningen)]] 
 * [[Grood Maarkt (Grunnen)|Grood Maarkt]]
 * t [[provìnziehuus (Grunnen)|provìnziehoes]]
-*  [[Der Aa-kerk]]
-*  [[Hoogkerk]]
+* [[Der Aa-kerk]]
+* [[Hoogkerk]]
 * t [[Goldkentoor]]
 * t [[Grunneger Museum]]
-*  [[Station Grunnen|station]] en t [[peerd van Ome Loeks]]
+* [[Station Grunnen|station]] en t [[peerd van Ome Loeks]]
 * Bult winkelstroatken om en bie [[Viskmaarkt]]
 * t daip [[Hoge der A]] mit zien pakhuzen
-*  [[Korenbeurs]]
-*  [[Prinsentoen]]
-*  [[Prinsenhof (Grunnen)|Prinsenhof]]
+* [[Korenbeurs]]
+* [[Prinsentoen]]
+* [[Prinsenhof (Grunnen)|Prinsenhof]]
 * t Stadhuus
 * veule gasthuzen
 
 == Geboren in Grunnen ==
-* [[Diederik Samsom]], polietieker veur  [[PvdA]]
+* [[Diederik Samsom]], polietieker veur [[PvdA]]
 
 == Leegsaksisch ==
 * [[Achterhooks]]: ''Grönningen,'' ''Groningen''
