--- a/Ommelanden.mw
+++ b/Ommelanden.mw
@@ -1,4 +1,4 @@
-{{HistLand|
+{{HistLand
 | vlage = [[Ofbeelding:Flag ommelanden.gif|150px|Vlage van de Ommelanden]]
 | woapen =
 | noaminlaandstoal = Grunneger Ommelanden
@@ -21,7 +21,7 @@
 '''De Ommelanden''' (tegenswoordeg ook wel: ''t Ommelaand'') is de oale noam veur de gebieden van de [[Grunnen (provìnzie)|provìnzie Grunnen]] dij boeten de Stad [[Grunnen (stad)|Grunnen]] liggen, dij zo as de vlage en t woapen al denken doun, [[Fraislaand|Frais]] waren. Historisch  waren der drij Ommelanden: [[Hunzego]], [[Fivelgo]] en t [[Westerkwartaar]]. t [[Reiderlaand (streek)|Reiderlaand]] en [[Westerwoolde (streek)|Westerwolde]] wuiren as apaarte gewesten zien, woarbie Westerwolde ook nimmer n Frais karakter had het. Ook t [[Gerecht (streek)|Gerecht]] (Stad Grunnen en omstreken) wuir nait as Ommelaand zain.  t [[Oldambt (streek)|Oldambt]] wuir sumties wel, sumtieds nait as apaart, vaaierde, Ommelaand zain. t [[Woapen van de Ommelanden]] verwiest anders enkeld noar de drij historische Ommelanden en de in totoal 11 onderkwartaren. Op t moment dat dij vlage in zwang kwam har t Oldambt ook aal zien vraaihaid verloorn.
 
 == Vrouge Middelaiwen ==
-Rond de [[Middelaiwen]] waren de Ommelanden [[Freesk|Fraistoaleg]], in tied dat t [[Gerecht (streek)|Gerecht]] en [[Westerwoolde (streek)|Westerwolde]] [[Leegsaksisch]] waren. De Ommelanden nuimden zokzölf [[Lutje Fraislaand]] (''Lyts Fryslân''). Zai wuiren bestuurd deur de lokoale adel en de kloosters. Zo was t [[klooster van Aauwerd]] de machtigste van de Ommelanden. Wieder waren de Ommelaanders vraai. Net zo as alle andere Fraizen in de [[Middelaiwen]] groalden zai van de ''Fraise vraaihaid''. 
+Rond de [[Middelaiwen]] waren de Ommelanden [[Freeske taaln|Fraistoaleg]], in tied dat t [[Gerecht (streek)|Gerecht]] en [[Westerwoolde (streek)|Westerwolde]] [[Leegsaksisch]] waren. De Ommelanden nuimden zokzölf [[Lutje Fraislaand]] (''Lyts Fryslân''). Zai wuiren bestuurd deur de lokoale adel en de kloosters. Zo was t [[klooster van Aauwerd]] de machtigste van de Ommelanden. Wieder waren de Ommelaanders vraai. Net zo as alle andere Fraizen in de [[Middelaiwen]] groalden zai van de ''Fraise vraaihaid''. 
 
 Net zo as tegenswoordeg bestonden de Ommelanden veural oet [[boer]]en dörpen. Der waren twij steden (loater drij) dij baaident veul invloud harren op de ‘bestuurloze’ Ommelanden. Dit waren de [[Grunnen (stad)|Stad Grunnen]] en [[n Daam]] (loater ook [[Winschoot]]). n Daam har de maiste macht in de Ommelanden, mor dou de Stad zien invloud oetoefenen gong op de Ommelanden, gong t mit n Daam al vlot aachteroet. Ook t noaberske [[Delfziel]] mit zien zeehoaven was n grode konkurrent veur n Daam.
 
@@ -29,7 +29,7 @@ Net zo as tegenswoordeg bestonden de Ommelanden veural oet [[boer]]en dörpen. D
 De Ommelanden hebben zok in t verleden fel verzet tegen de [[Grunnen (stad)|Stad]]. Zai nuimden zokzölf den ook: Eala Frya Fresena (De vraaie Fraizen, in t [[Oldfrais]]). As de adel op de [[börg]]en en de grode [[boerderieje|heerden]] te veul macht kregen, gong de börg of heerd plat. Ook de Stad is al moal aanvallen deur de Ommelaanders ([[1227]]). Dou de Stad te veul macht kreeg, sloten de Ommelanden zok aan bie de [[Unie van Utrecht|Unie van Oetrecht]], zodat de invloud van de Stad minder worden zoll. Dit was gain slimme zet, den dou de Stad zok ook aansloot bie de Unie van Oetrecht, en doarmit zien recht om te verovern inleverde ([[Reduksie van Grunnen]] 1595), wuiren de Ommelanden soamenvougd mit de Stad tot de provìnzie [[Stad en Lande]].
 
 == Stad en Lande ==
-Sunt des binnen de Stad en de Ommelanden ain gebied. Noa n aantal lutje konflikten mit enkele dörpkes, waren de opstanden tegen de Stad veurbie. Stad en Ommelanden paasden zok aan ainander aan en vörmen nau n ainhaid. t [[Freesk|Frais]] van de Ommelanden wuir verdrongen deur t [[Leegsaksisch]] van de Stad. Toch binnen der nog wel enkele Fraise woorden vindboar in t ''nije'' [[Grunnegs]]e dialekt. 
+Sunt des binnen de Stad en de Ommelanden ain gebied. Noa n aantal lutje konflikten mit enkele dörpkes, waren de opstanden tegen de Stad veurbie. Stad en Ommelanden paasden zok aan ainander aan en vörmen nau n ainhaid. t [[Freeske taaln|Frais]] van de Ommelanden wuir verdrongen deur t [[Leegsaksisch]] van de Stad. Toch binnen der nog wel enkele Fraise woorden vindboar in t ''nije'' [[Grunnegs]]e dialekt. 
 
 In [[1619]] kocht de Stad Grunnen de Heerlekhaid [[Westerwoolde (streek)|Westerwolde]] op. Bie de dreugleggen van n dail van de [[Dollart]], wuir t [[Reiderlaand (streek)|Reiderlaand]] weer vergroot, mor t heurde dou bie [[Oostfraislaand]]. Dou Oostfraislaand bie de Nederlanden vougd wuir ([[Koninkrijk Holland|Keunenkriek Hollaand]]), zag Grunnen zien kaans om t Reiderlaand over te nemen en de [[Ems (revier)|Ems]] weer as oostgrens vast te stèllen. n Groot dail doarvan het Grunnen weer inlevern mouten aan Oostfraislaand. t Overege paart wordt tegenswoordeg bie t Oldambt rekend (gemainte [[Reiderlaand (gemainte)|Reiderlaand]]. Westerwolde en t Reiderlaand hebben nooit offisjeel de titel van Ommeland kregen, mor worden sumtieds wel aangeven as Ommelaand.
 [[Ofbeelding:OmmelandenOudeGemeentes.PNG|right|thumb|Ien de olle gemaintegrìnzen van 1850 binnen de grìnzen van de Ommelanden nog dudelk heerkenboar.]]
