Verwysing nå döärverwyssyde repareerd ([[Frais]] nå [[Freeske taaln]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Stadsgrunnegs.mw
+++ b/Stadsgrunnegs.mw
@@ -52,7 +52,7 @@ t '''Stadsgrunnegs''' (ook ''Stadsgrunnegers'', ''Stadjeders'' of ''Stadjers'' n
 
 ==Geschiedenis en invlouden==
 ===Begun===
-t Stadsgrunnegs was oorspronkelk de toal dij de boasis vörmd har veur de aandere Grunnegse dialekten. In de 14e eeuw nam dit dialekt lanksoam t [[Frais]] oet de [[Ommelanden]] over. In dij tied het t Stadsgrunnegs woarschienlek veul leken op t hedendoagse [[Westerkertaaiers]]. Ook doar zigt man verschillende kenmarken dij tegenswoordeg nog aal in t Stadsgrunnegs veurkomen, mòr nait in de andere Grunnegse dialekten. Woarschienlek bestonden toun ook de klanken ai en ou veur de zudelke ie/ee en uu/oe nog nait. Dizze binnen loater vanoet de Ommelanden en Westfoalen in t Stadsgrunnegs terechte kommen. t Stadsgrunnegs is stark verwant an t [[Noordvelds]] dat ook wel tot t Grunnegs rekend wordt. Toch zollen t Stadsgrunnegs en t Noordvelds nooit hailemoal identiek an t Zuud- of Midden-Drènts west hebben. Der zol altied al n Fraise, of [[Ingvaeoons]]e invloud west hebben.
+t Stadsgrunnegs was oorspronkelk de toal dij de boasis vörmd har veur de aandere Grunnegse dialekten. In de 14e eeuw nam dit dialekt lanksoam t [[Freeske taaln|Frais]] oet de [[Ommelanden]] over. In dij tied het t Stadsgrunnegs woarschienlek veul leken op t hedendoagse [[Westerkertaaiers]]. Ook doar zigt man verschillende kenmarken dij tegenswoordeg nog aal in t Stadsgrunnegs veurkomen, mòr nait in de andere Grunnegse dialekten. Woarschienlek bestonden toun ook de klanken ai en ou veur de zudelke ie/ee en uu/oe nog nait. Dizze binnen loater vanoet de Ommelanden en Westfoalen in t Stadsgrunnegs terechte kommen. t Stadsgrunnegs is stark verwant an t [[Noordvelds]] dat ook wel tot t Grunnegs rekend wordt. Toch zollen t Stadsgrunnegs en t Noordvelds nooit hailemoal identiek an t Zuud- of Midden-Drènts west hebben. Der zol altied al n Fraise, of [[Ingvaeoons]]e invloud west hebben.
 
 ===Invloud op t Veenkelonioals===
 Ook het t Stadsgrunnegs n grote invloud had op t ontstoan van t Veenkelonioals. Deurdat t törf oet de Veenkelonies apmoal noar of via Stad verscheept wer, wer t Veenkelonioals inspoten mit Stadsgrunneger toalkenmarken, zo as de -e achter veul vrauwliekse woorden zo as "stoule", "deure" en "toene".
