--- a/De_Penne_(Grönnen).mw
+++ b/De_Penne_(Grönnen).mw
@@ -1,6 +1,6 @@
-'''De Penne''' ([[Nederlaands]]: ''Opende'', [[Frais]]: ''De Pein'') is n dörp in de gemainte [[Grodegast]] ([[Westerkwartaar]]) in de provìnzie [[Grunnen (provìnzie)|Grunnen]].
+'''De Penne''' ([[Nederlaands]]: ''Opende'', [[Westlaauwers Frais|Frais]]: ''De Pein'') is n dörp in de gemainte [[Grodegast]] ([[Westerkwartaar]]) in de provìnzie [[Grunnen (provìnzie)|Grunnen]].
 
-t Is ain van de ainege dörpen in dizze provìnzie woar grotendails [[Frais]] ([[Woldfrais]]) sproken wordt. In t Frais wordt t dörp ook wel ''De Grinzer Pein'' nuimd om op dij menair verwarren te veurkommen mit t Fraise dörp Opeinde, ''De Fryske Pein''.
+t Is ain van de ainege dörpen in dizze provìnzie woar grotendails [[Westlaauwers Frais|Frais]] ([[Woldfrais]]) sproken wordt. In t Frais wordt t dörp ook wel ''De Grinzer Pein'' nuimd om op dij menair verwarren te veurkommen mit t Fraise dörp Opeinde, ''De Fryske Pein''.
 
 De noam is n verwiezen noar de liggen: ''op'' (= aan) t ''einde'' (ìnde) van de weg van [[Grodegast]] noar [[Fraislaand]]. Op oale koarten zugt man de noam ook wel spèld mit n trema op de -e (dus: Opënde) om te veurkommen dat t oetsproken zoll worden as de verleden tied van openen. 
 
