Verwysing nå döärverwyssyde repareerd ([[Frais]] nå [[Freeske taaln]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Friso-Saksische_toalen.mw
+++ b/Friso-Saksische_toalen.mw
@@ -1,5 +1,5 @@
-[[Ofbeelding:Friso-Saxon Languages.PNG|right|250px|thumb|Friso-Saksisch]]
-De '''Friso-Saksische toalen''' (ook ''Noordwest-Leegsaksisch'' nuimd) vörmen soamen n apaarte group toalen binnen t [[Leegsaksisch]]e toalgebied. Zai onderschaaiden zok deur de invloud van t [[Frais]]. 
+[[Ofbeelding:Friso-Saxon Languages.PNG|250px|thumb|Friso-Saksisch]]
+De '''Friso-Saksische toalen''' (ook ''Noordwest-Leegsaksisch'' nuimd) vörmen soamen n apaarte group toalen binnen t [[Leegsaksisch]]e toalgebied. Zai onderschaaiden zok deur de invloud van t [[Freeske taaln|Frais]]. 
 
 Van ain soort Friso-Saksisch kìn nait sproken worden, omdat de bepoalde Leegsaksische dialekten ook deur verschillende Fraise toalen ([[Westlaauwers Frais]], [[Oostlaauwers Frais]], [[Noordfrais]]) beinvloud binnen.
 
@@ -11,7 +11,6 @@ Vergeliekboare termen binnen [[Friso-Franko-Saksisch]] en [[Friso-Frankisch]]. D
 De dialekten dij tot t Friso-Saksisch beheuren binnen:
 
 * [[Stellingwarfs|Stellenwaarfs]] (Westlaauwers Fraise ienvloud)
-
 * [[Grunnegs]] 
 **[[Pompsters]]
 **[[Westerkertiers]]
