--- a/Portoal:Grunnen.mw
+++ b/Portoal:Grunnen.mw
@@ -15,7 +15,7 @@ __NOTOC__ __NOEDITSECTION__
 |width="50%" bgcolor=ivory style="border-style:solid;border-width:1px;border-color:silver;padding:1em;padding-top:0;"|
 <h3>Wozzen joe dat:</h3>
 * ...t Grunneger boertje '[[Popko]]' sinds 2011 t Grunneger beeldmaark is van [[Grunnen (stad)|Stad]] en [[Grunnen (provìnzie)|pervìnzie Grunnen]]?
-* ...in de [[Westerkwartaaier|Westerkwartaaierse]] dörpen [[Moarum]], [[De Wilp]] en [[De Penne (Grönnen)|De Penne]] nog aal [[Frais]] proat wordt?
+* ...in de [[Westerkwartaaier|Westerkwartaaierse]] dörpen [[Moarum]], [[De Wilp]] en [[De Penne (Grönnen)|De Penne]] nog aal [[Westlaauwers Frais|Frais]] proat wordt?
 * ...de [[Stad Grunnen]] in de vrouge [[Middelaiwen]] n [[Drenthe|Drìnts]] esdörp was?
 * ...de [[Dollert]] vrouger tot [[Winschoot]] tou rekde en dat [[Blaauwe stad]] doar nou ligt?
 * ...[[n Daam]] sumtieds ook wel de twolfde [[Fraise elf Steden|Fraise stad]] nuimd wordt?
@@ -37,7 +37,7 @@ __NOTOC__ __NOEDITSECTION__
 |width="50%" bgcolor="honeydew" style="border-style:solid;border-width:1px;border-color:silver;padding:1em;padding-top:0;"|
 <h3>Toal in Grunnen</h3>
 [[Ofbeelding:Grunnegs toalkoart.JPG|75px|left|Toalkoart Grunnegs]]
-[[Grunnegs woordenbouk]] • [[Grunnegs]] • [[Hoogelaandsters]] • [[Westerkwartaars]] • [[Pompsters]] • [[Stadjeders]] • [[Noordvelds]] • [[Oldambtsters]] • [[Veenkolonioals]] • [[Westerwolds]] • [[Frais]] 
+[[Grunnegs woordenbouk]] • [[Grunnegs]] • [[Hoogelaandsters]] • [[Westerkwartaars]] • [[Pompsters]] • [[Stadjeders]] • [[Noordvelds]] • [[Oldambtsters]] • [[Veenkolonioals]] • [[Westerwolds]] • [[Westlaauwers Frais|Frais]] 
 
 |width=50% bgcolor=Oldlace style="border-style:solid;border-width:1px;border-color:silver;padding:1em;padding-top:0;"|
 <h3>Geogroafie</h3>
