Verwysing nå döärverwyssyde repareerd ([[Frais]] nå [[Freeske taaln]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Grunnegs-Oostfraise_veurnoamen.mw
+++ b/Grunnegs-Oostfraise_veurnoamen.mw
@@ -1,4 +1,4 @@
-'''Grunnegs-Oostfraise veurnoamen''' binnen noamen dij van oldsheer geven worden aan kinder in [[Grunnen (provinzie)|Grunnen]] en [[Oostfraislaand]]. Zai stammen al oet de Middelaiven, de tied dat Grunnen en Oostfraislaand nog [[Frais]]toaleg waren. De Grunnegs-Oostfraise noamen binnen dus aigelks [[Oostlaauwers Frais]]e noamen. Doarom is t ook nait zo vrumd dat dizze noamen ook veurkommen in t [[Selterlaand]]. In Grunnen worden dizze noamen tegenswoordeg veuraal nog geven in t Oldambt en op t Hoogelaand.
+'''Grunnegs-Oostfraise veurnoamen''' binnen noamen dij van oldsheer geven worden aan kinder in [[Grunnen (provinzie)|Grunnen]] en [[Oostfraislaand]]. Zai stammen al oet de Middelaiven, de tied dat Grunnen en Oostfraislaand nog [[Freeske taaln|Frais]]toaleg waren. De Grunnegs-Oostfraise noamen binnen dus aigelks [[Oostlaauwers Frais]]e noamen. Doarom is t ook nait zo vrumd dat dizze noamen ook veurkommen in t [[Selterlaand]]. In Grunnen worden dizze noamen tegenswoordeg veuraal nog geven in t Oldambt en op t Hoogelaand.
 
 Westlaauwers Fraise noamen binnen binoa t zulfde, môr ìndegen in stee van op n -o maisttieds op n -e. Bieveurbeeld: Anno (Grunnegs) - Anne (Frais), Fokko - Fokke, Edo - Ede, enz.
 
