Verwysing nå döärverwyssyde repareerd ([[Freesk]] nå [[Freeske taaln]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Westlaauwers_Frais.mw
+++ b/Westlaauwers_Frais.mw
@@ -39,7 +39,7 @@
 ** [[Germaanse sproaken|Germoans]]
 *** [[West-Germoanse toalen|West-Germoans]]
 **** [[Ingvaeoons]]
-**** [[Freesk|Frais]] 
+**** [[Freeske taaln|Frais]] 
 ***** '''Westlaauwers Frais''' 
 |-
 |Schrift  
@@ -65,7 +65,7 @@
 '''Westlaauwers Frais''' (of gewoon ''Frais'', in de toal zulf ''Frysk'') is n toal dij heurt bie [[West-Germoanse toalen|Noordwestgermoanse toek]] van [[West-Germoanse toalen|Westgermoanse toaln]]. Deur toalkundegen wordt  maisttied ''Westerlaauwers Frais'' nuimd. In boetenlaand staait t veuraal bekind as ''Westfrais'', moar in [[Nederlaand]] het [[Westfrais]] andere betaikenis. Op dizze pagina wordt de noam "Frais" aanholden.
 
 == Verbondskop mit aandere toalen ==
-Frais is naauw verbonden aan baaide aandere [[Freesk|Fraise toalen]], t [[Selterfrais]] en t [[Noordfrais]]. Wieder is Frais van oorsprong ook naauw verbonden aan t [[Oldengels]], [[Engels]] en [[Skots]]. Deur aivenlaange oafzönderlke ontwikkeln - zowel dij van de Angelsaksische toalen op [[Britse Eilanden|Britse Aailanden]], as dij van Frais op kontinìnt - het t tegenswoordege Frais aigelks meer gemain mit [[Nederlaands]] as mit Engels.
+Frais is naauw verbonden aan baaide aandere [[Freeske taaln|Fraise toalen]], t [[Selterfrais]] en t [[Noordfrais]]. Wieder is Frais van oorsprong ook naauw verbonden aan t [[Oldengels]], [[Engels]] en [[Skots]]. Deur aivenlaange oafzönderlke ontwikkeln - zowel dij van de Angelsaksische toalen op [[Britse Eilanden|Britse Aailanden]], as dij van Frais op kontinìnt - het t tegenswoordege Frais aigelks meer gemain mit [[Nederlaands]] as mit Engels.
 
 == Sprekers ==
 === Toalgebied ===
