Verwysing nå döärverwyssyde repareerd ([[Frais]] nå [[Westlaauwers Frais]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Grunnegs-Oostfraise_dialekten.mw
+++ b/Grunnegs-Oostfraise_dialekten.mw
@@ -34,13 +34,13 @@ t Dialekt van de Kop van Drìnt wordt voak bie t Grunnegs rekend. Dit binnen den
 De ai-klank wordt, behaalve in Eel-Potterwòld en Zuudloaren, meer oetsproken as -ij en wordt doarom voak schreven as ei, dus ''neit'' en ''gein''. Dit sloet den ook weer aan op Midden-Drìntse ''neeit'' en ''geein'', wat oetsproken wordt as de Grunnegse ''ee''. n Aander biezunderhaid van t Noordvèlds is dat man gain ö-klaank kent. Dit wordt sikkom aaltied n -u of -o.
 
 ===Westerkertaaier===
-Ien t Westerkertaaier worden verschaaiden varianten proat dij n overgang vörmen van t [[Hogelaandsters]] noar t [[Frais]] en [[Stellenwaarfs]]. De maiste dialekten kennen de klanken ai, ou en ui nait, woardeur t veur veul aander Grunnegers klinkt as of de Westerkertaaierders haalf-bakken Grunnegs proaten, in tieds dat de nait diftongeerde vörm oller is. 
+Ien t Westerkertaaier worden verschaaiden varianten proat dij n overgang vörmen van t [[Hogelaandsters]] noar t [[Westlaauwers Frais|Frais]] en [[Stellenwaarfs]]. De maiste dialekten kennen de klanken ai, ou en ui nait, woardeur t veur veul aander Grunnegers klinkt as of de Westerkertaaierders haalf-bakken Grunnegs proaten, in tieds dat de nait diftongeerde vörm oller is. 
 
 Ien t [[Middaglaand]] wordt gain ''oet'', ''goud'' en ''wie'', zègd, môr ''uut'', ''goed'' en ''wij''. Doardeur wordt dit dialekt tou t Westerkertaaiers rekend. Wel zègt man nog ''nait'' en ''gruin'', wat weer overainkomt mit t Hoogelaandsters. Vrouger heurden [[Aisen]], [[Fiwwerd]], [[Gaarnwerd]] en [[Hoogkèrk]] ook bie t Westerkertaaierse dialektgebied, mòr dit is laanksoam verschoven. Hoogkèrk is, deurdat t aan Stad vastgruid is, zien aigen karakter grotendails kwietworden. 
 
-t Noordwestelke dialekt gaait meer noar t [[Frais]] tou en wordt den ook aan aander zied van de Laauwers proat in t oostelke dail van t Köllemerlaand. Voak wordt der n onderschaaid moakt tuzzen t Homsterlaands en t Midden-Westerkertaaiers, wegens t staarke Frais-achtege aksìnt van t Homsterlaands, môr der binnen gain dudelke isoglossen. t Homsterlaands komt overain mit t dialekt van t Köllemerlaand, dat over gaait in t [[Pompsters]] dat enkeld nog deur n poar olle luu proat wordt. De maiste Pompsters proaten Frais mit wat Westerkertaaierse / Grunnegse woorden der deur; nait Friso-Saksisch, mòr Saxo-Frais. Ook t [[Stadsfrais]] van Köllem het wat Grunnegse invlouden had.
+t Noordwestelke dialekt gaait meer noar t [[Westlaauwers Frais|Frais]] tou en wordt den ook aan aander zied van de Laauwers proat in t oostelke dail van t Köllemerlaand. Voak wordt der n onderschaaid moakt tuzzen t Homsterlaands en t Midden-Westerkertaaiers, wegens t staarke Frais-achtege aksìnt van t Homsterlaands, môr der binnen gain dudelke isoglossen. t Homsterlaands komt overain mit t dialekt van t Köllemerlaand, dat over gaait in t [[Pompsters]] dat enkeld nog deur n poar olle luu proat wordt. De maiste Pompsters proaten Frais mit wat Westerkertaaierse / Grunnegse woorden der deur; nait Friso-Saksisch, mòr Saxo-Frais. Ook t [[Stadsfrais]] van Köllem het wat Grunnegse invlouden had.
 
-t Zudelk westerkertaaiers dat proat wordt in Kornhörn, Luukswolde, Tolbert, Leek en alles ten zuden doarvan, gaait meer richten t [[Stellenwaarfs]] mit woorden as ''gruun'' en ''vulen'' veur t Midden-Westerkertaaierse ''groen'' en ''voelen'' en t Hoogelaandsterse ''gruin'' en ''vuilen''. In t zuudwestelkste dail van t Westerkertaaier wordt noast t Westerkertaaiers ook [[Frais]] proat.
+t Zudelk westerkertaaiers dat proat wordt in Kornhörn, Luukswolde, Tolbert, Leek en alles ten zuden doarvan, gaait meer richten t [[Stellenwaarfs]] mit woorden as ''gruun'' en ''vulen'' veur t Midden-Westerkertaaierse ''groen'' en ''voelen'' en t Hoogelaandsterse ''gruin'' en ''vuilen''. In t zuudwestelkste dail van t Westerkertaaier wordt noast t Westerkertaaiers ook [[Westlaauwers Frais|Frais]] proat.
 
 Biezunderheden dij ien t haile Westerkertaaier veurkommen binnen ''zijt'' en ''lijt'' veur ''zègt'' en ''lègt''. 
 
