Verwysing nå döärverwyssyde repareerd ([[Frais]] nå [[Freeske taaln]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Friso-Frankische_toalen.mw
+++ b/Friso-Frankische_toalen.mw
@@ -1,4 +1,4 @@
-De '''Friso-Frankische toalen''' vörmen soamen n apaarte group toalen binnen t Leegfrankisch toalgebied. Zai onderschaaiden zok deur de invloud van t [[Frais]].
+De '''Friso-Frankische toalen''' vörmen soamen n apaarte group toalen binnen t Leegfrankisch toalgebied. Zai onderschaaiden zok deur de invloud van t [[Freeske taaln|Frais]].
 
 Van ain soort Friso-Frankisch kìn nait sproken worden, omdat de bepoalde Leegfrankische dialekten ook deur verschillende Fraise toalen ([[Westlaauwers Frais]], [[Oostlaauwers Frais]], [[Noordfrais]]) beinvloud binnen.
 
