--- a/Ploatsnoambred.mw
+++ b/Ploatsnoambred.mw
@@ -13,12 +13,13 @@ Bie n [[gehucht]] of [[buurtschap|noaberschop]] is der voak gain offisjele bebaa
 ==Twijtoalege ploatsnoambreds==
 * Sunt de joaren '50 staait der ien de provìnzie [[Fraislaand]] noast de Nederlaandse ploatsnoam, ook de [[Frais]]e noam op t bred. Ien gounen gemainten (zoas [[Dantemediel|Dantumadail]]) stoan allinneg de Fraise ploatsnoamen op t bred.  
 * De provìnzie [[Grunnen (provìnzie)|Grunnen]] het hier ook over noadocht, môr oetìndelk is t nait deurgoan.
-* De Limbörgse gemainte [[Weert]], het sund [[15 juli]] overaal twijtoalege ploatsnoambreds.
+* De Limbörgse gemainte [[Weert (gemeente)|Weert]], het sund [[15 juli]] overaal twijtoalege ploatsnoambreds.
 * Ien [[Luxemburg (laand)|Luxembörg]] hebben ze ook overaal twijtoalege ploatsnoambreds.
 
 ==Boetende hìnwiezen==
 * [http://notab.outducks.org/index.html Webstee mit foto's van ploatsnoambreds van aal ploatsnoamen ien Nederlaand]
 
 {{commonscat|City limit signs}}
-[[Kategorie:Grunnegs_artikel]]
+
+[[Kategorie:Grunnegs artikel]]
 [[Kategorie:Verkeer]]
