Verwysing nå döärverwyssyde repareerd ([[Frais]] nå [[Westlaauwers Frais]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Ploatsnoambred.mw
+++ b/Ploatsnoambred.mw
@@ -11,7 +11,7 @@ Voak zit der onder n ploatsnoambred nog n lutje bred mit n tekst as "''Welkom''"
 Bie n [[gehucht]] of [[buurtschap|noaberschop]] is der voak gain offisjele bebaauwde kom, hierdeur geldt der bie dit ploatsnoambred automoatisch gain legere maximumsnelhaid. Hier staait dan voak n ploatsnoambred ien t negatief: n wit bred mit blaauwe of swaarte letters.
 
 ==Twijtoalege ploatsnoambreds==
-* Sunt de joaren '50 staait der ien de provìnzie [[Fraislaand]] noast de Nederlaandse ploatsnoam, ook de [[Frais]]e noam op t bred. Ien gounen gemainten (zoas [[Dantemediel|Dantumadail]]) stoan allinneg de Fraise ploatsnoamen op t bred.  
+* Sunt de joaren '50 staait der ien de provìnzie [[Fraislaand]] noast de Nederlaandse ploatsnoam, ook de [[Westlaauwers Frais|Frais]]e noam op t bred. Ien gounen gemainten (zoas [[Dantemediel|Dantumadail]]) stoan allinneg de Fraise ploatsnoamen op t bred.  
 * De provìnzie [[Grunnen (provìnzie)|Grunnen]] het hier ook over noadocht, môr oetìndelk is t nait deurgoan.
 * De Limbörgse gemainte [[Weert (gemeente)|Weert]], het sund [[15 juli]] overaal twijtoalege ploatsnoambreds.
 * Ien [[Luxemburg (laand)|Luxembörg]] hebben ze ook overaal twijtoalege ploatsnoambreds.
