Verwysing nå döärverwyssyde repareerd ([[Frais]] nå [[Freeske taaln]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Veurlopen.mw
+++ b/Veurlopen.mw
@@ -1,4 +1,4 @@
-'''Veurlopen''' is n paranormaal verschiensel dat vrouger veul veurkwam ien de [[Nedersaksisch|Saksische]] en [[Frais]]e gebieden. Vrouger leufen mennege luu ien dizze gebieden dat dit echt was. t Verschiensel holdt ien dat man n "visioen" (toukomstbeeld) zag, dus man vernam wat, veurdat t echt gebeurde. Dit kon wezen ien vörm van lichten of geluden, mor bieveurbeeld ook symbolen. Zo ston n hoelende hond veur dood. As aine n vrumde, hoelende hond over t veld zag, betaikende dat voak dat der aine oet tied kommen zol. n Rooie hemel betaikende oorlog of n aander oprour, môr maisttieds zagen mìnzen dingen, voak lichten of zo wat, woar loater n autoweeg lègd is of n hoes baauwd is.  
+'''Veurlopen''' is n paranormaal verschiensel dat vrouger veul veurkwam ien de [[Nedersaksisch|Saksische]] en [[Freeske taaln|Frais]]e gebieden. Vrouger leufen mennege luu ien dizze gebieden dat dit echt was. t Verschiensel holdt ien dat man n "visioen" (toukomstbeeld) zag, dus man vernam wat, veurdat t echt gebeurde. Dit kon wezen ien vörm van lichten of geluden, mor bieveurbeeld ook symbolen. Zo ston n hoelende hond veur dood. As aine n vrumde, hoelende hond over t veld zag, betaikende dat voak dat der aine oet tied kommen zol. n Rooie hemel betaikende oorlog of n aander oprour, môr maisttieds zagen mìnzen dingen, voak lichten of zo wat, woar loater n autoweeg lègd is of n hoes baauwd is.  
 
 Man nuimt dit ook wel "helderziendheid" (kloarzicht). Der binnen mennege verhoalen van luu dij vrouger schienboar dizze goave haren. Luu dij dit haren, doarvan wör ook wel zegd dat zai ''mit helm op geboren'' wazzen. Sumtieds wör t zain as wat duvels en sumtieds was t juust wat positiefs. 
 
