*Empty MediaWiki Message*

--- a/Grunnegs_(Westerwoolds).mw
+++ b/Grunnegs_(Westerwoolds).mw
@@ -2,9 +2,9 @@
 Dizze ziede kin zain worden as de '''Westerwôldse toalwiezer''' (''Westerwooldse taolwiezer''), de ziede dij t [[Westerwoolds|Westerwôldse dialekt]] beschrieft, môr staait binnen de [[Grönnegse toalwiezer]] om de staarke noudoagse (ondergeschikte) reloatsie mit t [[Grönnegs]] dudelk tou moaken en omreden der nait genog informoatsie over t Westerwôlds beschikboar is om n haile apaarte toalwiezer der veur aan tou moaken.
 
 ----
-<center><small>''Van noe of an wodt tr up dis ziede up zin Westerwoolds schreven.''</small></center>
+<div style="text-align:center; font-size:85%>''Van noe of an wodt tr up dis ziede up zin Westerwoolds schreven.''</div>
 
-Obwool t [[Westerwoolds]] binao nich meer snakt wodt, zint verscheidene kenmaarken van de olle taol overleverd wodden en hierunder beschreven. t [[Grönnegs]] is n Friso-Saksische taol. t Westerwoolds is anners n meer Saksische spraoke en heft dan ok meer gemein mit t Westveels, as mit t [[Frais|Freis]]. Woorden as ''nich'' veur t Grönnegse "nait" ([[Tweants|Twènts]]: ''nich'') en ''schoof'' veur n pak stro (Twènts: ''schoof'') verdudelkt de relaosie mit t Westveels. n Kenmaark dat t Westerwoolds dudelk Grönnegs maokt, is t aksent, dat nich up dei van t Westfeels liekt, man meer up dei van de anner Grönnegse dialekten.
+Obwool t [[Westerwoolds]] binao nich meer snakt wodt, zint verscheidene kenmaarken van de olle taol overleverd wodden en hierunder beschreven. t [[Grönnegs]] is n [[Friso-Saksische toalen|Friso-Saksische taol]]. t Westerwoolds is anners n meer Saksische spraoke en heft dan ok meer gemein mit t [[Westfaals|Westveels]], as mit t [[Freeske taaln|Freis]]. Woorden as ''nich'' veur t Grönnegse "nait" ([[Tweants|Twènts]]: ''nich'') en ''schoof'' veur n pak stro (Twènts: ''schoof'') verdudelkt de relaosie mit t Westveels. n Kenmaark dat t Westerwoolds dudelk Grönnegs maokt, is t aksent, dat nich up dei van t Westfeels liekt, man meer up dei van de anner Grönnegse dialekten.
 
 == Schriefwies ==
 Ein offisjele schriefwies veur t Westerwoolds is tr nich, ok gein veurkeursschriefwies. Daorum wodt vaok de teksten van schrievers as [[J.H. Neuteboom]] volgd um de schriefwies dudelk tou maoken. In dizze schriefwies zint Grönnegse, Drèntse on Hoogduutse invlouden to vinden.
@@ -314,8 +314,8 @@ Der zint n heile bult woorden dei of up zin Westerwoolds aans zint as up anner G
 |-
 |Up ... daal
 ''Dei kaomer keek up t plein daal''
-|Op ... neer<div>
-''Die kamer keek op het plein neer''<div>
+|Op ... neer<br>
+''Die kamer keek op het plein neer''<br>
 ''(Die kamer had uitzicht op het plein)''
 |}
 
