Verwysing nå döärverwyssyde repareerd ([[Frysk]] nå [[Westlaauwers Frais]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Heerd_(ruumte).mw
+++ b/Heerd_(ruumte).mw
@@ -24,8 +24,8 @@ In onder aandere 't [[Zuiderzeemuseum]] in [[Enkhuzen]] ku-j nog een antal huzen
 **''goeie/beste ka{{small()|o}}mer/-kämer''
 **''kamer'' ([[Uddel]])
 
-== [[Frysk]] ==
-* [[Opkeamer]]
+== [[Westlaauwers Frais|Frysk]] ==
+* Opkeamer
 
 {{Dia|Disse pagina is eschreven in 't [[Nunspeets]]}}
 
