Verwysing nå döärverwyssyde repareerd ([[Freesk]] nå [[Westlaauwers Frais]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Nederlaand.mw
+++ b/Nederlaand.mw
@@ -21,7 +21,7 @@
 
 Nederlaand, inklusief de Karibiese eilaanden [[Bonaere]], [[Sunte-Eustasius]] en [[Saba]], vormen samen mit [[Aruba]], [[Curaçao]], [[Sunte-Marten (eilaand)|Sunte-Marten]] t [[Koninkriek der Nederlaanden]]. De verhoudingen bin bepaold in t [[Statuut veur t Koninkriek der Nederlaanden]] van [[1954]]. Nederlaand hef in totaal [[provinsies van Nederlaand|twaolf provinsies]] en 358 [[gemiente (bestuur)|gemeenten]] (2019).
 
-De twee offisiële talen van Nederlaand bin t [[Nederlaands]] en t [[Freesk|Fries]]. t [[Nedersaksies]] en t [[Limburgs]] hebben as [[streektaol|streektaal]] n legere staotus as t Fries, zo as vermeld steet in t statuut veur de minderheidstalen. De twee aandere niet-Germaanse streektalen bin t [[Jiddisj]] en [[Romani]]. Aandere talen die vake espreuken wörden bin van allochtone aofkomst; namelik: t [[Turks]], [[Berbers]], [[Arabies]] (Marokkaans dialekt), [[Papiaments]], [[Sranantongo]] en [[Chinees]].
+De twee offisiële talen van Nederlaand bin t [[Nederlaands]] en t [[Westlaauwers Frais|Fries]]. t [[Nedersaksies]] en t [[Limburgs]] hebben as [[streektaol|streektaal]] n legere staotus as t Fries, zo as vermeld steet in t statuut veur de minderheidstalen. De twee aandere niet-Germaanse streektalen bin t [[Jiddisj]] en [[Romani]]. Aandere talen die vake espreuken wörden bin van allochtone aofkomst; namelik: t [[Turks]], [[Berbers]], [[Arabies]] (Marokkaans dialekt), [[Papiaments]], [[Sranantongo]] en [[Chinees]].
 
 t Nederlaandse staotsheufd is [[Willem-Alexander van de Nedderlanden|Willem-Alexander]]. De premier is noen [[Mark Rutte]].
 
