Verwysing nå döärverwyssyde repareerd ([[Freesk]] nå [[Westlaauwers Frais]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Frieslaand.mw
+++ b/Frieslaand.mw
@@ -5,7 +5,7 @@
 | waopen         = Friesland wapen.svg
 | kaort          = Friesland-Position.png
 | region         = NL-FR
-| taolen         = [[Freesk|Fries]], [[Nederlaands|Nederlaans]], [[Nederfrankies|Nederfrankiese dialekten]] ([[Stadsfries]], [[Amelaands]], [[Bildts]] en [[Midslaands]]) en [[Nedersaksies]] ([[Westerkertiers]] en [[Stellingwarfs]])
+| taolen         = [[Westlaauwers Frais|Fries]], [[Nederlaands|Nederlaans]], [[Nederfrankies|Nederfrankiese dialekten]] ([[Stadsfries]], [[Amelaands]], [[Bildts]] en [[Midslaands]]) en [[Nedersaksies]] ([[Westerkertiers]] en [[Stellingwarfs]])
 | heufdstad      = [[Liwwadden (stad)|Liwwadden]]
 | geleuf         = [[Protestantisme|Protestaans]] 30%<br />[[Rooms-Katholieke Karke|Katteliek]] 6%<br />[[Islam|Moslim]] 2%
 | geleuf_jaor    = 2005
@@ -18,11 +18,11 @@
 | bevolkingsdichtheid = 194
 | breedtegroad   = 53/11/44/N
 | lengtegroad    =  5/42/31/E
-| webstee        = http://www.fryslan.frl
+| webstee        = http://www.fryslan.frl/
 }}
 [[Bestaand:Prov-Friesland-OpenTopo.jpg|thumb|Frieslaand]]
 [[Bestaand:Friesland-5.62E-53.13N.jpg|thumb|Satellietfoto van Frieslaand]]
-'''Frieslaand''' ([[Nederlaans]]: ''Friesland'', [[Freesk|Fries]] en officieel: ''Fryslân'') is een perveensie in et noorden van [[Nederlaand]]. Mit 3.349 km² is et nao [[Gelderlaand]] en [[Noord-Braobant]] de grootste perveensie van Nederlaand. De perveensie greenst an [[Grunnen (provìnzie)|Grunningen]], [[Drenthe]], [[Overiessel]], [[Flevolaand]] en is via de [[Ofsluutdiek]] mit [[Noord-Hollaand]] verbunnen. Frieslaand is een waeterrieke perveensie en leit an et Iesselmeer (vrogger: [[Zuderzee]]) en de [[Waddenzee]]. 
+'''Frieslaand''' ([[Nederlaans]]: ''Friesland'', [[Westlaauwers Frais|Fries]] en officieel: ''Fryslân'') is een perveensie in et noorden van [[Nederlaand]]. Mit 3.349 km² is et nao [[Gelderlaand]] en [[Noord-Braobant]] de grootste perveensie van Nederlaand. De perveensie greenst an [[Grunnen (provìnzie)|Grunningen]], [[Drenthe]], [[Overiessel]], [[Flevolaand]] en is via de [[Ofsluutdiek]] mit [[Noord-Hollaand]] verbunnen. Frieslaand is een waeterrieke perveensie en leit an et Iesselmeer (vrogger: [[Zuderzee]]) en de [[Waddenzee]]. 
 
 In de Waddenzee liggen de Friese [[waddenaailanden|waddeneilanen]] [[Terschelling]], [[Amelaand]], [[Vlielaand]] en [[Schiermonnikoog]], disse eilanen beheuren tot Frieslaand en bin beriekber per [[veerboot]] vanof et vaastelaand. De veerboten veren vanuut [[Harlingen (stad)|Harlingen]] naor Vlielaand en Terschelling, vanof [[Holwerd]] naor Amelaand en vanof [[Laauwersoog|Lauwersoog]] naor Schiermonnikoog. Frieslaand het omdebi'j 650.000 inwoners. De heufdstad d'r van is [[Liwwadden (stad)|Liwwadden]] (Fries: ''Ljouwert''). De officiële taelen bin Nederlaans en Fries.
 
@@ -34,12 +34,12 @@ Historisch zien kan Frieslaand verdield wodden in 3 gewesten:
 * [[Zeuvenwoolden]]
 
 == Naeme ==
-Sund [[1 jannewaori]] [[1997]] is allienig et [[Freesk|Friestaelige]] ''Fryslân'' in Nederlaand de officiële naeme van de perveensie. In [[november]] [[2004]] het et [[Ministerie van Binnenlaanse Zaeken en Keuninkrieksrelaosies]] besleuten d'r op toe te zien dat de officiële naeme in overheidsstukken ok konsekwent bruukt wodt. In et daegelikse spraokgebruuk in de rest van Nederlaand en in et Nederlaans taelgebruuk wodt liekewel vri'jwel altied de Nederlaanstaelige naeme ''Friesland'' bruukt.
+Sund [[1 jannewaori]] [[1997]] is allienig et [[Westlaauwers Frais|Friestaelige]] ''Fryslân'' in Nederlaand de officiële naeme van de perveensie. In [[november]] [[2004]] het et [[Ministerie van Binnenlaanse Zaeken en Keuninkrieksrelaosies]] besleuten d'r op toe te zien dat de officiële naeme in overheidsstukken ok konsekwent bruukt wodt. In et daegelikse spraokgebruuk in de rest van Nederlaand en in et Nederlaans taelgebruuk wodt liekewel vri'jwel altied de Nederlaanstaelige naeme ''Friesland'' bruukt.
 
 Om de perveensie te onderscheiden van [[Noord-Frieslaand|Noord-]] en [[Oost-Frieslaand]] en de [[Laandkreis|Kreis]] [[Frieslaand (distrikt)|Frieslaand]] in [[Nedersaksen]] wodt de perveensie in wetenschoppelike kringen ok wel anduud as ''Westerlauwers Frieslaand''.
 
 == Tael ==
-De taelen die et meest praot wodden in de perveensie bin et [[Nederlaands|Nederlaans]] en et [[Freesk|Fries]] (''Frysk''). Et Fries het een staotus as minderhiedstael en wodt naost et Nederlaans as een officiële laanstael erkend. In veul Friese steden praoten de meensken gien (of minnig) Fries mar [[Stadsfries]], een Nederlaans dialekt mit starke Friese invloeden. Ok in [[Midslaand]], op [[Amelaand]] en in [[Et Bildt]] wodden verwaante dialekten praot.
+De taelen die et meest praot wodden in de perveensie bin et [[Nederlaands|Nederlaans]] en et [[Westlaauwers Frais|Fries]] (''Frysk''). Et Fries het een staotus as minderhiedstael en wodt naost et Nederlaans as een officiële laanstael erkend. In veul Friese steden praoten de meensken gien (of minnig) Fries mar [[Stadsfries]], een Nederlaans dialekt mit starke Friese invloeden. Ok in [[Midslaand]], op [[Amelaand]] en in [[Et Bildt]] wodden verwaante dialekten praot.
 
 Deur de officiële staotus van et Fries hebben de meeste plakken in de perveensie zowel een Nederlaanse as een Friese benaeming. Pattie plakken hebben allienig een gebruukte Nederlaanse benaeming omdat ze buten et officiële Friese taelgebied valen. Van de plakken in de gemienten [[Dantemediel]], [[Tietjerksterediel]], [[Ferwerderediel]], [[Boornsterhem]] en [[Littenserediel]] bin sund jaoren allienig de Friese benaemingen officieel, zoas [[Damwoolde|Damwâld]] (''Damwoolde''), [[Hardegeriep|Hurdegaryp]] (''Hardegeriep''), [[Bargum|Burgum]] (''Bargum''), [[Grouw|Grou]] (''Grouw''), [[Irnsum|Jirnsum]] (''Irnsum'') en [[Rauwerd|Raerd]] (''Rauwerd'').
 
