Verwysing nå döärverwyssyde repareerd ([[Freesk]] nå [[Westlaauwers Frais]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Taol.mw
+++ b/Taol.mw
@@ -1,5 +1,5 @@
-[[Bestaand:Proaten.PNG|thumb|right|250px|'t Warkwoord ''praoten'' in Germaonse dialecten]]
-'''Taol''' is 'n communicaotiemiddel waordeur mèènsen mit mekare praoten können. Der bint wereldwied krap 7000 taolen volgens de publicaotie ''Ethnologue: Languages of the World'', al hangt 't antal of van oen definitie van 'taol': veul taolen vluuien mit heur dialecten in mekare over. Der bint verschillende [[taolfemilie]]s: alliene in Europa al bint der de [[Germaanse taolen]], de [[Romaanse taolen]], de eïsoleerde taolen, de [[Slavische taolen]] die in de Balkanlanen en de [[Baltische taolen]] die in de Baltische lanen epraot wörden. [[Nederlaand]] hef naost 't Nederlaans dree officieel erkende [[streektaol]]en, 't [[Limbörgs|Limburgs]], 't [[Nedersaksisch]] en 't [[Freesk|Fries]].
+[[Bestaand:Proaten.PNG|thumb|250px|'t Warkwoord ''praoten'' in Germaonse dialecten]]
+'''Taol''' is 'n communicaotiemiddel waordeur mèènsen mit mekare praoten können. Der bint wereldwied krap 7000 taolen volgens de publicaotie ''Ethnologue: Languages of the World'', al hangt 't antal of van oen definitie van 'taol': veul taolen vluuien mit heur dialecten in mekare over. Der bint verschillende [[taolfemilie]]s: alliene in Europa al bint der de [[Germaanse taolen]], de [[Romaanse taolen]], de eïsoleerde taolen, de [[Slavische taolen]] die in de Balkanlanen en de [[Baltische taolen]] die in de Baltische lanen epraot wörden. [[Nederlaand]] hef naost 't Nederlaans dree officieel erkende [[streektaol]]en, 't [[Limbörgs|Limburgs]], 't [[Nedersaksisch]] en 't [[Westlaauwers Frais|Fries]].
 
 't Gangbaore verskil tussen enerzieds ''taol'' (mit een hoge weerdering) en aanderzieds ''[[dialekt|dialect]]'' (mit een lege weerdering) wördt in de taolkunde niet emaakt, umdat 't willekeurig en [[poletiek]] bepaold is: de dialecten van 't [[Chinees]] verschillen net zoveul van mekare as de onderscheiden Romaanse taolen. Taolkundigen geven deurgaons de veurkeur an 't maotskappelijk niet belaojen begrip ''variëteit''. Een aandere term veur 'taol' is ok wel ''spraok''.
 
