--- a/Zaandhuzen.mw
+++ b/Zaandhuzen.mw
@@ -1,4 +1,4 @@
-'''Zaandhuzen''' ([[Nederlaands|Nederlaans]]: ''Zandhuizen'', [[Freesk|Fries]]: ''Sânhuzen'') is een klein dörp in de gemiente [[Weststellingwarf]] in de [[Nederlaand]]se perveensie [[Frieslaand]]. Zaandhuzen het omdebi'j 300 inwoners.
+'''Zaandhuzen''' ([[Nederlaands|Nederlaans]]: ''Zandhuizen'', [[Westlaauwers Frais|Fries]]: ''Sânhuzen'') is een klein dörp in de gemiente [[Weststellingwarf]] in de [[Nederlaand]]se perveensie [[Frieslaand]]. Zaandhuzen het omdebi'j 300 inwoners.
 
 Et dörp is waorschienlik tussen 1000 en 1100 ontstaon as uuthof van een klooster uut Rinsumegeest ombedi'j [[Dokkum]]. Et dörp is een esdörp. Onderdiel van Zaandhuzen is ''Et Rooie Dörp'', waor in 1920 huurwoningen mit een groot stok laand bouwd binnen.
 
