Verwysing nå döärverwyssyde repareerd ([[Freesk]] nå [[Westlaauwers Frais]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Weststellingwarf.mw
+++ b/Weststellingwarf.mw
@@ -16,7 +16,7 @@ lengtegraod = 6.00 |
 verkeersaoder = A32, N351 |
 netnummer = 0527 <small>= [[Sliekenborg]]</small><br />0561 |
 postkode = 8388 t/m 8398 <br /> 8470 t/m 8472 <br /> 8474 t/m 8479 <br /> 8481 t/m 8489 |
-webstee = [http://www.weststellingwerf.nl www.weststellingwerf.nl] |
+webstee = [http://www.weststellingwerf.nl/ www.weststellingwerf.nl] |
 }}
 '''Weststellingwarf''' (ok wel: ''Stellingwarf-Westaende'') is een [[Frieslaand|Friese]] [[gemiente (bestuur)|gemiente]] mit 25.486 inwoners ([[1 mei]] [[2014]], bron: CBS) en een oppervlakte van 228,45 [[vierkaante kilometer|km²]], waorvan 2 km² waeter. De gemiente leit in de [[Stellingwarven]], tegen de greenzen mit de perveensies [[Drenthe]] en [[Oaveriessel|Overiessel]]. Et gemientebestuur is vestigd in [[Wolvege]].
 
@@ -28,7 +28,7 @@ De [[laandbouw]] omvat akkerbouw en veehoolderi'je, de industrie (veurnaemelik v
 De ooldste dörpen in Weststellingwarf ontstonnen in de [[8e ieuw]] totan de [[14e ieuw]], bouwd op flauw hellende, lange zaandroggen, die oorspronkelik begreensd wodden deur hoogvenen. In de [[11e ieuw]] beheurden West- en [[Ooststellingwarf]] tot [[Drenthe]] en stonnen ze onder de [[Bisschop van Utrecht]]. Et bestuur en de rechtspraoke weren in hanen van stellings (dörpsrechters), die elk jaor wisselden. In [[1504]] wodde et gebied de tiende [[grieteni'je]] van de [[Friese Woolden|Zeuvenwoolden]].
 
 == Belangriekste plakken ==
-De gemiente Weststellingwarf telt 26 officiële dörpen. De heufdplak is [[Wolvege]]. De Nederlaanse naemen bin de officiële, de Friese naemen wodden niet gebruukt. In Weststellingwarf wodt gien [[Freesk|Fries]], mar [[Stellingwarfs]] praot, een [[Nedersaksisch]] [[dialekt]]. De plaknaembodden in de gemiente bin ientaelig Nederlaans.
+De gemiente Weststellingwarf telt 26 officiële dörpen. De heufdplak is [[Wolvege]]. De Nederlaanse naemen bin de officiële, de Friese naemen wodden niet gebruukt. In Weststellingwarf wodt gien [[Westlaauwers Frais|Fries]], mar [[Stellingwarfs]] praot, een [[Nedersaksisch]] [[dialekt]]. De plaknaembodden in de gemiente bin ientaelig Nederlaans.
 
 === Dörpen ===
 Antal inwoners per woongebied op [[1 jannewaori]] [[2008]]: 
