--- a/Liwwadden_(gemiente).mw
+++ b/Liwwadden_(gemiente).mw
@@ -16,9 +16,9 @@
 | verkeersaoder = A31, N31, A32, N32, N355, N357, N359, N383
 | netnummer = 058 en 0566
 | postkode = 8900 - 9089
-| webstee = [http://www.leeuwarden.nl www.leeuwarden.nl]
+| webstee = [http://www.leeuwarden.nl/ www.leeuwarden.nl]
 }}
-'''Liwwadden''' ([[Stadsfries]]: ''Liwwadden''; [[Freesk|Fries]]: ''Ljouwert'') is een gemiente in de perveensie [[Frieslaand]]. De gemiente Liwwadden had op 1 jannewaori 2020 124.058 inwoners<ref>CBS<br /></ref> en het een oppervlakte van 255,62 [[Vierkaante kilometer|km²]], waorvan 17,24 km² waeter.
+'''Liwwadden''' ([[Stadsfries]]: ''Liwwadden''; [[Westlaauwers Frais|Fries]]: ''Ljouwert'') is een gemiente in de perveensie [[Frieslaand]]. De gemiente Liwwadden had op 1 jannewaori 2020 124.058 inwoners<ref>CBS<br /></ref> en het een oppervlakte van 255,62 [[Vierkaante kilometer|km²]], waorvan 17,24 km² waeter.
 
 Et heufdplak van de gemiente is de gelieknaemige stad [[Liwwadden (stad)|Liwwadden]]. De stad telt omdebi'j 96.000 inwoners (per jannewaori 2014).
 
