Verwysing nå döärverwyssyde repareerd ([[Freesk]] nå [[Westlaauwers Frais]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Liwwadden_(stad).mw
+++ b/Liwwadden_(stad).mw
@@ -1,4 +1,4 @@
-'''Liwwadden''' ([[Stadsfries]]: ''Liwwadden''; [[Freesk|Fries]]: ''Ljouwert'') is de [[heufdstad]] van [[Frieslaand]] en ok et heufdplak van de gelieknaemige gemiente [[Liwwadden (gemiente)|Liwwadden]]. Op 1 december 2005 telde de gemiente 91.769 inwoners en bi'jkaans 55.000 arbeidsplakken. Liwwadden is ien van de Friese elf steden. Veerder beschikt Liwwadden over een uutgebreide kulturele infrastruktuur, waoronder een grote [[schouwburg]] ([[De Harmonie]]) en diverse musea en kulturele instellingen waoronder: et Fries Museum, et Netuurmuseum Fryslân, et Historisch Centrum Liwwadden en 'Tresoar'. 
+'''Liwwadden''' ([[Stadsfries]]: ''Liwwadden''; [[Westlaauwers Frais|Fries]]: ''Ljouwert'') is de [[heufdstad]] van [[Frieslaand]] en ok et heufdplak van de gelieknaemige gemiente [[Liwwadden (gemiente)|Liwwadden]]. Op 1 december 2005 telde de gemiente 91.769 inwoners en bi'jkaans 55.000 arbeidsplakken. Liwwadden is ien van de Friese elf steden. Veerder beschikt Liwwadden over een uutgebreide kulturele infrastruktuur, waoronder een grote [[schouwburg]] ([[De Harmonie]]) en diverse musea en kulturele instellingen waoronder: et Fries Museum, et Netuurmuseum Fryslân, et Historisch Centrum Liwwadden en 'Tresoar'. 
 
 == Nedersaksisch ==
 * [[Grunnegs]]: 
