Verwysing nå döärverwyssyde repareerd ([[Freesk]] nå [[Westlaauwers Frais]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Pompsters.mw
+++ b/Pompsters.mw
@@ -36,7 +36,7 @@
 |[[Latainse alfabet|Latijnse alfabet]]
 |-
 |Toalstoates
-|t Pompsters wordt zien as dialekt van t zowel t [[Grunnegs]] as t [[Freesk|Fries]]
+|t Pompsters wordt zien as dialekt van t zowel t [[Grunnegs]] as t [[Westlaauwers Frais|Fries]]
 |-
 |Toalkode ISO 639-1
 |n.v.t.
