--- a/Kuunder_(revier).mw
+++ b/Kuunder_(revier).mw
@@ -1,6 +1,6 @@
-[[Ofbeelding:Sluis Tjonger 03.JPG|thumb|right|Slusien in de Kuunder]]
-[[Ofbeelding:De Tjongermolen Mildam 07.JPG|thumb|right|De Kuundermeulen bi'j [[Mildam]]]]
-[[Ofbeelding:Taalgrensmonument.jpg|thumb|right|Taelgreensmonument]]
+[[Ofbeelding:Sluis Tjonger 03.JPG|thumb|Slusien in de Kuunder]]
+[[Ofbeelding:De Tjongermolen Mildam 07.JPG|thumb|De Kuundermeulen bi'j [[Mildam]]]]
+[[Ofbeelding:Taalgrensmonument.jpg|thumb|Taelgreensmonument]]
 De '''Kuunder''' of '''Tsjonger''' ([[Nederlaands|Nederlaans]]: ''Kuinder of Tjonger'', [[Westlaauwers Frais|Fries]]: ''De Tsjonger'') is een [[revier]]tien dat kotbi'j de [[Drenthe|Drentse]] greens leit, et lopt van zuudoost naor zuud-[[Frieslaand]]. 
 
 De Kuunder en de [[Opsterlaanse Kompejonsvaort]] maeken diel uut van de [[Turfroute]]. 
@@ -14,7 +14,7 @@ In de Kuunder liggen drie sluzen. Bi'j disse sluzen staon pompen om bi'j lege wa
 Vrogger mondde de Kuunder uut in de [[Zuderzee]] bi'j et [[Oaveriessel|Overiesselse]] plakkien [[De Kuunder (Stienwiekerlaand)|De Kuunder]]. Deur de anleg van de [[Ofsluutdiek]] en de [[Noordoostpolder|Noordoostpoolder]] is de monding blokkeerd. Waeter uut de Kuunder komt sund die tied tot ofvoer via de Friese boezem, onder aandere deur de spuisluzen in [[Harlingen (stad)|Harlingen]] en et [[J.L. Hooglandgemael]] bi'j [[Stavoren]].
 
 == Taelgreens en naeme ==
-De Kuunder vormt een taelgreens: globaol kan steld wodden dat et [[Freesk|Friese]] taelgebied in et noorden d'r-van leit, en et [[Stellingwarfs]]e taelgebied ([[Nedersaksisch]]) in et zuden d'r-van. Dit is ok de reden dat d'r twie naemen veur etzelde reviertien bin: elk taelgebied het zien eigen naemen. In et Fries wodt de naeme Tsjonger veur et reviertien bruukt, in et Stellingwarfs en Nederlaans zowel Tsjonger/Tjonger as ok Kuunder/Kuinder bruukt.
+De Kuunder vormt een taelgreens: globaol kan steld wodden dat et [[Westlaauwers Frais|Friese]] taelgebied in et noorden d'r-van leit, en et [[Stellingwarfs]]e taelgebied ([[Nedersaksisch]]) in et zuden d'r-van. Dit is ok de reden dat d'r twie naemen veur etzelde reviertien bin: elk taelgebied het zien eigen naemen. In et Fries wodt de naeme Tsjonger veur et reviertien bruukt, in et Stellingwarfs en Nederlaans zowel Tsjonger/Tjonger as ok Kuunder/Kuinder bruukt.
 
 De naemen Tsjonger en Kuunder hebben dezelde herkomst. De k wodt in et Fries soms tsj, zoas ok bijveurbeeld in karke-tsjerke. De nd wodt in et Fries soms ng, zo as ok in donder-tonger (et Engels het dat nog vaeker, zoas in denkend-thinking). A'j dat toepast, dan krie'j dus kuunder-tsjuunder-tsjuunger-tsjonger.
 
