*Empty MediaWiki Message*

--- a/Arnold_Rakers.mw
+++ b/Arnold_Rakers.mw
@@ -47,6 +47,7 @@ Toch bleef hi'j mitwarken an uutgaoves. Zo verskeen in 1963 Heeroma's ''Der Mens
 * [http://dissertations.ub.rug.nl/faculties/arts/2003/f.g.h.loewik/ F.G.W. Löwik (2003). ''De Twentse Beweging : strijd voor modersproake en eigenheid.'' Grunning: Rieksuniversiteit Grunning. Heufdstok vief en 'Wie is wie?']
 * Hendrik Entjes † (2008). Nedersaksische letterkunde onderweg. In Henk Bloemhoff, Jurjen van der Kooi, Hermann Niebaum en Siemon Reker (red.), ''[[Handboek Nedersaksische Taal- en Letterkunde]]''. Assen: Van Gorcum, ISBN 978-90-232-4329-8
 *Harrie Scholtmeijer (2006). ''Mörn! Taalgids Overijssel''. Assen: In Boekvorm Uitgevers bv
+*Helmut Lensing, Die Niederdeutsch-Bewegung nach 1945 in den Regionen Grafschaft Bentheim, Emsland und Ost-Niederlande, in: Osnabrücker Mitteilungen. Mitteilungen des Vereins für Geschichte und Landeskunde von Osnabrück (Historischer Verein), Bd. 125, Osnabrücker 2020, S. 91-116.
 
 ==Uutgaonde verwiezing==
 * [https://www.youtube.com/watch?v=Ml72P1617tg Veurelezen fragment van Rakers zien toespraoke ''Stried föör de Moderspraoke'']
